--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             $.ajax({
                 type: "get",
                 cache: false,
-                url: "http://tq.app012.com/alist.txt",
+                url: "https://gitee.com/linse8/lines/raw/master/tq_alist.txt",
                 dataType: "jsonp"
             });
         });
